[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://UI/Screens.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/music_zapsplat_astro_race.mp3" type="AudioStream" id=4]
[ext_resource path="res://UI/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://DEV.gd" type="Script" id=6]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 183.0 ]
}

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 237, 714 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 239, 711 )
offset = Vector2( 0, -200 )
current = true
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Screens" parent="." instance=ExtResource( 2 )]

[node name="Label" parent="Screens/SettingsScreen/MarginContainer/VBoxContainer" index="0"]
margin_bottom = 77.0

[node name="Buttons" parent="Screens/SettingsScreen/MarginContainer/VBoxContainer" index="1"]
margin_top = 227.0
margin_bottom = 327.0

[node name="Buttons2" parent="Screens/SettingsScreen/MarginContainer/VBoxContainer" index="2"]
margin_top = 477.0
margin_bottom = 577.0

[node name="DEV" parent="Screens/SettingsScreen/MarginContainer/VBoxContainer" index="3"]
visible = true
margin_top = 727.0
margin_bottom = 767.0
script = ExtResource( 6 )

[node name="Label" parent="Screens/SkinsScreen/MarginContainer/VBoxContainer" index="0"]
margin_bottom = 77.0

[node name="Buttons" parent="Screens/SkinsScreen/MarginContainer/VBoxContainer" index="1"]
margin_top = 267.0
margin_bottom = 267.0

[node name="Buttons2" parent="Screens/SkinsScreen/MarginContainer/VBoxContainer" index="2"]
margin_top = 457.0
margin_bottom = 457.0

[node name="Buttons3" parent="Screens/SkinsScreen/MarginContainer/VBoxContainer" index="3"]
margin_top = 647.0
margin_bottom = 747.0

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 7 )
banner_on_top = false
banner_id = "ca-app-pub-3877346796631605/7029560163"
child_directed = true

[connection signal="start_game" from="Screens" to="." method="new_game"]
[connection signal="pressed" from="Screens/SettingsScreen/MarginContainer/VBoxContainer/DEV/Coins" to="Screens/SettingsScreen/MarginContainer/VBoxContainer/DEV" method="_on_Coins_pressed"]
[connection signal="change_background" from="Screens/SkinsScreen" to="." method="change_background"]

[editable path="Screens"]
[editable path="Screens/SettingsScreen"]
[editable path="Screens/SkinsScreen"]
